<resources>
    <string name="app_name">ASW scanner</string>
    <string name="title">ASW</string>
    <string name="subtitle">Automate Your Class</string>
    <string name="login">Login</string>
    <string name="id_placeholder">Academic ID</string>
    <string name="password_placeholder">Password</string>
    <string name="btnForgot_text">Forgot Password?</string>
    <string name="btnLogin_text">Login</string>
    <string name="welcome_student">Welcome, %1$s </string>
    <string name="academic_id">%1$s</string>
    <string name="btnLogout_text">Logout</string>
    <string name="btnScan_text">Scan</string>
    <string name="btnHistory_text">History</string>
    <string name="btnProfile_text">Profile</string>
    <string name="history_title">Attendance History</string>
    <string name="student_name">%1$s</string>
    <string name="go">Go to \n<a>https://portal.aiub.edu/ForgotPassword</a>\n to reset your VUES password</string>
    <string name="button">Back to Login</string>
    <string name="remember_me">Keep me logged in</string>
    <string name="attendance_history">Attendance History</string>
    <string name="profile">Profile</string>
    <string name="scan_confirmation">Scan Confirmation</string>
    <string name="you_have_just_scanned_for_a_class_of">You have just scanned for a class of</string>
    <string name="back_to_dashboard">Back to Dashboard</string>
</resources>