<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical"
    android:weightSum="15"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="13"
        android:background="#484848"
        android:weightSum="15"
        android:orientation="horizontal"
        android:baselineAligned="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:width="10dp"
                android:text="@string/welcome_student"
                android:textColor="#d9d9d9"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/academic_id"
                android:textColor="#d9d9d9"
                android:textSize="18sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="11"
            android:gravity="center_vertical|center_horizontal|center"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLogout_text"
                android:background="@drawable/logout_btn_bg_stroke"
                android:textColor="#d9d9d9"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#32a1b8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:weightSum="10"
        android:orientation="vertical"
        android:gravity="center_vertical|center|center_horizontal"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="100dp"
        android:paddingBottom="100dp">

        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnScan_text"
            android:layout_weight="4"
            tools:ignore="NestedWeights"
            android:background="#32a1b8"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#303030"/>

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnHistory_text"
            android:layout_weight="1"
            android:background="#32a1b8"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#303030"/>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnProfile_text"
            android:layout_weight="1"
            android:background="#32a1b8"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textColor="#303030"/>
    </LinearLayout>
</LinearLayout>